# SuperVideo

./: .gitignore  CLAUDE.md  README.md  implementation_plan.md  init.bat  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_cuda.txt  task.md
backend/: go.mod  main.go
backend/internal/config/: config.go
backend/internal/database/: database.go  migrations.go
backend/internal/domain/: client.go  transactor.go  user.go  video.go
backend/internal/handlers/: app.go  auth_handler.go  middleware.go  query_handler.go  upload_handler.go
backend/internal/models/: api.go  client.go  user.go  video.go
backend/internal/router/: router.go
backend/internal/security/: passwords.go
backend/internal/service/: query_service.go  upload_service.go  user_service.go
backend/internal/store/: classification_store.go  client_store.go  detection_store.go  helpers.go  session_store.go  transactor.go  user_store.go  (+1 more)
backend/web/: embed.go
client/: main.py
client/api/: client.py
client/database/: migrations.py  models.py  repository.py
client/ui/: main_window.py  progress_panel.py  results_panel.py  settings.py  settings_dialog.py
client/workers/: classify_worker.py  scan_worker.py  upload_worker.py
scripts/: download_models.py  extract_frames.bat  extract_frames.sh
src/supervideo_bird_classifier/: __init__.py  bird_db.py  classifier.py  detector.py  device.py  pipeline.py  scorer.py
src/supervideo_frame_extractor/: __init__.py  cli.py  config.py  models.py  scanner.py  service.py
tests/: test_config.py  test_smoke.py
video/: test.cfg
(+3 files in other folders)
