[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supervideo-frame-extractor"
version = "0.1.0"
description = "Extract selected video frames to JPG with ffmpeg."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
supervideo-frames = "supervideo_frame_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
